changed start_date to date and styled back buttons for mobile view

--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -7,7 +7,7 @@
         <li><strong><%= appointment.title %></strong></li>
         <li>Description: <%= appointment.description %></li>
         <li>Address: <%= appointment.address %></li>
-        <li>Date: <%= appointment.start_date.strftime("%b %d, %Y") %></li>
+        <li>Date: <%= appointment.date.strftime("%b %d, %Y") %></li>
         <ul>
         </div>
       <% end %>
