--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,6 @@
         <h1></span>
         <div class = "cards-wrapper">
           <div class = "row g-1 d-flex justify-content-center">
-
             <%# Documents %>
             <div class = "col">
               <%= link_to documents_path do %>
@@ -15,7 +14,6 @@
               <% end %>
               <p class = "card-label">Documents</p>
             </div>
-
             <%# Appointments %>
             <div class = "col">
               <%= link_to appointments_path do %>
@@ -25,15 +23,13 @@
               <% end %>
               <p class = "card-label">Appointments</p>
             </div>
-
-            <%# Travel info %>
-            <%# <div class = "col">
-              <div class = "card home-icon-card"> %>
-                <%#= image_tag "world.png", class: "img-fluid icon-image" %>
-              <%# </div> %>
-              <%# <p class = "card-label">Travel Info</p> %>
-            <%# </div> %>
-
+            <%#Travel info%>
+            <div class = "col">
+              <div class = "card home-icon-card">
+                <%= image_tag "world.png", class: "img-fluid icon-image" %>
+              </div>
+              <p class = "card-label">Travel Info</p>
+            </div>
             <%# Tools %>
             <div class = "col">
               <div class = "card home-icon-card">
@@ -41,7 +37,6 @@
               </div>
               <p class = "card-label">Tools</p>
             </div>
-
           </div>
         </div>
       </div>
@@ -49,7 +44,6 @@
     <div class = "card health-card">
       <h3 class="text-center">Health Status</h3>
       <%= image_tag "health.png", class: "img-fluid health-card-image" %>
-
       <%# Allergy %>
       <div class = "flex-container">
         <span class="material-symbols-outlined md-40">allergy
@@ -67,7 +61,6 @@
           <% end %>
         </div>
       </div>
-
       <%# Prescriptions %>
       <div class = "flex-container">
         <span class="material-symbols-outlined md-40 ">medication_liquid
@@ -80,7 +73,6 @@
           <span class="badge text-bg-secondary" >Doxycyline 30g</span>
         </div>
       </div>
-
       <%# Illnesses %>
       <div class = "flex-container">
         <span class="material-symbols-outlined md-40">stethoscope
@@ -93,8 +85,7 @@
           <span class="badge text-bg-secondary" >Migraine</span>
         </div>
       </div>
-
-      <%# <div class = "flex-container">
+      <div class = "flex-container">
         <span class="material-symbols-outlined md-40">clinical_notes
           <div>
             <p class = "health-status">Doctor Log</p>
@@ -104,8 +95,7 @@
           <span class="badge text-bg-secondary" >中村佐藤</span>
           <span class="badge text-bg-secondary" >Paul Johnson</span>
         </div>
-      </div> %>
-
+      </div>
     <% else %>
       <div class="logo-container d-flex">
         <div class = "app-title animate__animated animate__fadeIn animate__delay-1s	1s ">
