--- a/app/views/shared/_body_measurements_form.html.erb
+++ b/app/views/shared/_body_measurements_form.html.erb
@@ -8,6 +8,6 @@
     <%= f.input :arms %>
     <%= f.input :legs%>
     <%= f.button :submit, "Submit", class: "button" %>
-    <%= link_to "Back", user_path, class: "button" %>
+    <%= link_to "Back", user_path, class: "back-button ms-2" %>
   <% end %>
 </div>
