--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -20,9 +20,35 @@
   box-shadow: 0px 0px 0px #999999;
 }
 
+
+.back-button {
+padding: 17px 35px;
+border-radius: 10px;
+background: #8978b4;
+color: white;
+font-weight: bold;
+font-size:16px;
+text-decoration: none;
+box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.7);
+cursor: pointer;
+
+&:hover {
+  color: white;
+  background: #ac9bd7;
+}
+}
+
+.back-button:active {
+  box-shadow: 0px 0px 0px #999999;
+}
+
 @media only screen and (max-width: 600px) {
   .button {
     padding: 10px 25px;
+  }
+
+  .back-button{
+    padding: 13px 25px;
   }
 
 
