--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,10 +1,10 @@
 <div class = "container-sm p-4 mt-3">
-<h1 class = "appointments-header text-center"> Make An Appointment</h1>
-<%= simple_form_for(@appointment, html: { class: "appointment-form" }) do |f| %>
-  <%= f.input :title %>
-  <%= f.input :description %>
-  <%= f.input :start_date, html5: true %>
-  <%= f.input :address %>
-  <%= f.button :submit, "Add Appointment", class: "button" %>
-<% end %>
+  <h1 class = "appointments-header text-center"> Make An Appointment</h1>
+  <%= simple_form_for(@appointment, html: { class: "appointment-form" }) do |f| %>
+    <%= f.input :title %>
+    <%= f.input :description %>
+    <%= f.input :date, html5: true %>
+    <%= f.input :address %>
+    <%= f.button :submit, "Add Appointment", class: "button" %>
+  <% end %>
 </div>
