--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -48,6 +48,9 @@ ul {
   font-family: "Alegreya Sans", "sans-serif";
 }
 
+.health-status a:visited{
+color:inherit;
+}
 
 
 @media only screen and (max-width: 600px) {
