Center text according to buttons

--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -86,44 +86,36 @@
         </div>
       </div>
       <div class = "document-upload-section">
+
+
         <div class = "flex-container-document">
           <%= link_to documents_path(document: "Referral Letters"), class: "link " do %>
-            <p>
-              <span class="material-symbols-outlined document-icon-button">clinical_notes</span>
-              Referral Letters
-            </p>
+            <span class="material-symbols-outlined document-icon-button">clinical_notes</span>
+            <p>Referral Letters</p>
           <% end %>
         </div>
         <div class = "flex-container-document">
           <%= link_to documents_path(document: "Immunization Records"), class: "link" do %>
-            <p>
-              <span class="material-symbols-outlined document-icon-button">syringe</span>
-              Immunization Records
-            </p>
+            <span class="material-symbols-outlined document-icon-button">syringe</span>
+            <p>Immunization Records</p>
           <% end %>
         </div>
         <div class = "flex-container-document">
           <%= link_to documents_path(document: "Pathology Records"), class: "link" do %>
-            <p>
-              <span class="material-symbols-outlined document-icon-button">labs</span>
-              Pathology Records
-            </p>
+            <span class="material-symbols-outlined document-icon-button">labs</span>
+            <p>Pathology Records</p>
           <% end %>
         </div>
         <div class = "flex-container-document">
           <%= link_to documents_path(document: "Prescription Records"), class: "link" do %>
-            <p>
-              <span class="material-symbols-outlined document-icon-button">pill</span>
-              Prescription Records
-            </p>
+            <span class="material-symbols-outlined document-icon-button">pill</span>
+            <p>Prescription Records</p>
           <% end %>
         </div>
         <div class = "flex-container-document">
           <%= link_to documents_path(document: "Radiology Reports"), class: "link" do %>
-            <p>
-              <span class="material-symbols-outlined document-icon-button">radiology</span>
-              Radiology Reports
-            </p>
+            <span class="material-symbols-outlined document-icon-button">radiology</span>
+            <p>Radiology Reports</p>
           <% end %>
         </div>
       </div>
