--- a/app/assets/stylesheets/pages/_documents.scss
+++ b/app/assets/stylesheets/pages/_documents.scss
@@ -69,7 +69,7 @@ margin-left: 20px;
 }
 
 .document-upload-section{
-  margin: 0 auto;
+  margin: 0 32px;
   width: 300px;
 }
 
@@ -81,6 +81,11 @@ margin-left: 20px;
   margin: 1rem;
   p {
     color:#ffffff;
+    margin: 0px 0px 0px 8px;
+  }
+  a.link {
+    display: flex;
+    align-items: center;
   }
 }
 
