--- a/app/assets/stylesheets/pages/_documents.scss
+++ b/app/assets/stylesheets/pages/_documents.scss
@@ -69,7 +69,7 @@ margin-left: 20px;
 }
 
 .document-upload-section{
-  margin: 0 32px;
+  margin: 0 auto;
   width: 300px;
 }
 
@@ -129,6 +129,10 @@ margin-left: 20px;
   border-radius: 10px;
   box-shadow: inset 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 18px;
 }
 
 .document-icon-button:hover{
