Changed prescriptions text

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -69,8 +69,7 @@
           </div>
         </span>
         <div class="allergies">
-          <span class="badge text-bg-secondary" >Imuran</span>
-          <span class="badge text-bg-secondary" >Doxycyline 30g</span>
+          <span class="badge text-bg-secondary" >Xolair 0,016mg</span>
         </div>
       </div>
       <%# Illnesses %>
