Style basic pills

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -53,3 +53,11 @@ cursor: pointer;
 
 
 }
+.health-pill {
+  border-radius: 50px;
+  border: 1px solid #5ABAAE;
+  padding: 6px;
+  background-color: #5ABAAE;
+  font-size: 14px;
+  color: white;
+}
