completed style for document categories

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -12,6 +12,9 @@
   width: 100%;
   margin-top: 50px;
   padding-bottom: 20px;
+  background-image: url("upload_background.png");
+  background-size: 300px 200px;
+
 }
 
 .footer{
