--- a/app/assets/stylesheets/pages/_documents.scss
+++ b/app/assets/stylesheets/pages/_documents.scss
@@ -1,4 +1,9 @@
-
+.custom-container{
+  width: 100% !important;
+  max-width: 100% !important;
+  padding: 0 !important;
+  margin: 0 !important;
+}
 .upload-card {
   display: flex;
   align-items: center;
@@ -28,10 +33,8 @@
   text-align: center;
 }
 
-
-
 .upload-label{
-  font-size: 20px;
+  font-size: 30px;
   text-align: center;
   font-weight: bold;
   padding-top: 50px;
@@ -58,6 +61,14 @@
 margin-left: 20px;
 }
 
+
+.background{
+  background: radial-gradient(circle at 10% 20%, rgba(216, 241, 230, 0.46) 0.1%, rgba(233, 226, 226, 0.28) 90.1%);
+  width: 100% !important;
+}
+
+
+
 .document-buttons{
   margin-top: 50px;
 }
@@ -66,6 +77,33 @@ margin-left: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
+
+}
+
+.scanned-style{
+  background-color: white;
+  box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
+                0 0  0 2px rgb(190, 190, 190),
+                0.3em 0.3em 1em rgba(0,0,0,0.3);
+
+                border-radius: 10px;
+
+  .doctor-name {
+    color:#020438;
+
+  }
+
+}
+
+.scanned-style:hover{
+  transform: scale(0.95);
+    transition: all 0.3s;
+}
+
+.md-60 {
+  font-size: 40px !important;
+  color: #191a22;
+  margin-right: 15px;
 }
 
 .document-upload-section{
@@ -75,13 +113,52 @@ margin-left: 20px;
 
 
 .flex-container-document{
-  display:flex;
-  justify-content: space-between;
-  align-items: center;
+  // display:flex;
+  // flex-direction: row;
+  // // justify-content: center;
+  // // align-items: center;
   margin: 1rem;
+  border: 2px solid #020438;
+  border-radius: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+
+  background-color: white;
+  box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
+                0 0  0 2px rgb(190, 190, 190),
+                0.3em 0.3em 1em rgba(0,0,0,0.3);
+
   p {
-    color:#ffffff;
+    color:#020438;
+
   }
+}
+
+.flex-container-document:hover{
+    transform: scale(0.95);
+    transition: all 0.3s;
+}
+
+.link-flex{
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+
+
+  p {
+    margin: 0;
+    color:#020438;
+  }
+}
+
+.md-50 {
+  font-size: 50px !important;
+  color: #020438;
+  margin-right: 15px;
 }
 
 
