--- a/app/assets/stylesheets/pages/_documents.scss
+++ b/app/assets/stylesheets/pages/_documents.scss
@@ -76,12 +76,14 @@ margin-left: 20px;
 .documents-flex{
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
+  margin-bottom: 20px;
 
 }
 
 .scanned-style{
   background-color: white;
+  width: 100% !important;
   box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
                 0 0  0 2px rgb(190, 190, 190),
                 0.3em 0.3em 1em rgba(0,0,0,0.3);
@@ -90,7 +92,9 @@ margin-left: 20px;
 
   .doctor-name {
     color:#020438;
-
+    width: 400px;
+    text-align: left;
+    margin: 16px 0;
   }
 
 }
