Add link to avatar picture and styled forms

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -20,14 +20,14 @@
 }
 
 // Made the recangular picture into a circular avatar
-.circular-avatar {
-  position: relative;
-  width: 40px; height: 40px;
-  overflow: hidden;
-  border-radius: 50%;
-}
+// .circular-avatar {
+//   position: relative;
+//   width: 40px; height: 40px;
+//   overflow: hidden;
+//   border-radius: 50%;
+// }
 
-.circular-avatar img {
-  width: 100%;
-  height: auto;
-}
+// .circular-avatar img {
+//   width: 100%;
+//   height: auto;
+// }
