--- a/app/views/documents/edit.html.erb
+++ b/app/views/documents/edit.html.erb
@@ -1,8 +1,11 @@
-<%= simple_form_for @document do |f| %>
-  <%= f.input :doctor_name, placeholder: @document.doctor_name %>
-  <%= f.input :country ,as: :select, collection: Document::COUNTRIES, label: 'Country' %>
-  <%= f.input :date, html5: true %>
-  <%= f.input :doc_type, collection: Document::DOC_TYPES, label: 'Add category' %>
-  <%= f.input :comment %>
-  <%= f.button :submit, "Save", class: "button" %>
-<% end %>
+<div class = "container-sm p-4 mt-3">
+  <h1 class = "document-header">Document Information</h1>
+  <%= simple_form_for(@document, html: { class: "user-form" }) do |f| %>
+    <%= f.input :doctor_name, placeholder: @document.doctor_name %>
+    <%= f.input :country ,as: :select, collection: Document::COUNTRIES, label: 'Country' %>
+    <%= f.input :date, html5: true %>
+    <%= f.input :doc_type, collection: Document::DOC_TYPES, label: 'Add category' %>
+    <%= f.input :comment %>
+    <%= f.button :submit, "Save", class: "button" %>
+  <% end %>
+</div>
