--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -27,7 +27,9 @@
 
 .health-card{
   color: black;
-  margin: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-top: 0px;
   border-radius: 10px;
   padding-top: 30px;
   padding-bottom: 30px;
@@ -43,10 +45,12 @@
 @media only screen and (max-width: 600px) {
   .home-icon-card {
     padding: 10px;
-    margin-top: 60px;
+    margin-top: 17px;
     width: 70px;
     height: 70px;
     border-radius: 20px;
+    margin-left: 6px;
+    margin-right: 6px;
   }
 
   .health-card{
