Add splashscreen option to navbar logo

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<% if current_user %>
+<% if current_user && params[:page] != "welcome" %>
   <div class="homepage-container">
     <span>
       <h1 class = "welcome">Welcome back, Marie!
