--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,19 +1,23 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-healthpocket">
   <div class="container-fluid">
-    <%= link_to root_path, class: "navbar-brand" do %>
-      <%= image_tag "navlogo.png" %>
+    <% if params[:page].present? %>
+      <%= link_to root_path, class: "navbar-brand" do %>
+        <%= image_tag "navlogo.png" %>
+      <% end %>
+    <% else %>
+      <%= link_to root_path(page: "welcome"), class: "navbar-brand" do %>
+        <%= image_tag "navlogo.png" %>
+      <% end %>
     <% end %>
-
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span>
-<lord-icon
+        <lord-icon
     src="https://cdn.lordicon.com/ynwbvguu.json"
     trigger="hover"
     colors="primary:#5abaae"
     style="width:40px;height:40px">
-</lord-icon></span>
+        </lord-icon></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
@@ -24,7 +28,7 @@
             <%= link_to "Documents", documents_path, class: "nav-link" %>
           </li>
           <li class="nav-item dropdown">
-              <%= image_tag "avatar.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            <%= image_tag "avatar.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "My profile", user_path(current_user), class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
