--- a/app/views/shared/_medical_history_form.html.erb
+++ b/app/views/shared/_medical_history_form.html.erb
@@ -1,8 +1,9 @@
 <div class = "container-sm p-4 mt-3">
   <h1 class = "user-header">Medical History</h1>
   <%= simple_form_for(@user, html: { class: "user-form" })  do |f| %>
-    <%# <%= f.input :date, html5: true %>
-    <%= f.input :weight %>
+    <%= f.input :disease %>
+    <%= f.input :start_date, as: :date, html5: true %>
+    <%= f.input :end_date, as: :date, html5: true %>
     <%= f.button :submit, "Submit", class: "button" %>
     <%= link_to "Back", user_path, class: "button" %>
   <% end %>
