Show form in new View

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,7 +30,7 @@
           <span class="material-symbols-outlined md-40 health-icon-card ms-3">
             stethoscope
             <div>
-              <p><%= link_to "Medical History", {form_name: "medical_history"}%></p>
+              <p><%= link_to "Medical History", new_medical_history_path %></p>
             </div>
           </span>
         </div>
