--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,11 +1,12 @@
-// Graphical variables
-@import "config/fonts";
-@import "config/colors";
-@import "config/bootstrap_variables";
-
 // External libraries
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome";
+
+
+// Graphical variables
+@import "config/colors";
+@import "config/bootstrap_variables";
+@import "config/fonts";
 
 // Your CSS partials
 @import "components/index";
@@ -15,14 +16,17 @@
 
 html, body{
   height:100%;
+
 }
 
 body{
   display: flex;
   flex-direction: column;
+
 }
 .content{
   flex: 1 0 auto;
+  background-color: #ffffff;
 }
 #translate {
   form#edit_document_7{
