--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -2,6 +2,7 @@
 .login-title{
   text-align: center;
 
+
 }
 
 .logo-flex{
@@ -12,6 +13,7 @@
 .login-logo{
   height: 80px;
   width: 80px;
+
 }
 
 .login-input{
@@ -22,12 +24,9 @@
 
 .login-card{
 background: #ffffff;
-padding: 20px;
-border-radius: 5px;
-transition: border-radius 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
-              0 0  0 2px rgb(190, 190, 190),
-              0.3em 0.3em 1em rgba(0,0,0,0.3);
+width: 100%;
+height: 100%;
+
 }
 
 .login-button{
